k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    app: preview-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
